@@ -527,3 +527,4 @@ N(OP_XTargetResponse),
 N(OP_XTargetAutoAddHaters),
 N(OP_Weblink),
 N(OP_InspectMessageUpdate),
+N(OP_ItemPreview),
