@@ -278,4 +278,5 @@
 	void Handle_OP_LFGuild(const EQApplicationPacket *app);
 	void Handle_OP_XTargetRequest(const EQApplicationPacket *app);
 	void Handle_OP_XTargetAutoAddHaters(const EQApplicationPacket *app);
+	void Handle_OP_ItemPreview(const EQApplicationPacket *app);
 
