@@ -3,6 +3,7 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 ==01/01/2013==
 Uleat: Fixed the wear change issue where the server was not translating the SoF, SoD and UF clients' update request properly.
 Uleat: Fixed the non-clickable quest reward bug triggered when the item was in a container and the player traded the item or zoned.
+Vaion: RoF: Found Opcode for Item Previews.  Made base packet support so that Item Preview (Alt+Right Click) works.  Still a few issues to hash out.
 
 ==12/31/2012==
 Derision: RoF: Added encode/decode for BlockedBuffs and OP_FindPerson. Added opcodes for FindPerson and RestState
